# DiagnoAI-Backend-rust

./: .env  Cargo.toml
src/: main.rs
src/controllers/: user.rs
src/database/: mod.rs
src/dto/: mod.rs
src/models/: token.rs  user.rs  user_model.rs
src/utils/: email.rs  mod.rs  openai.rs  rand_token.rs  redis.rs
