[package]
name = "diagno-backend-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-web = "4.4.1"
async-openai = "0.18.0"
bcrypt = "0.15.0"
bson = { version = "2.8.1", features = ["chrono"] }
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
lettre = "0.11.3"
mongodb = "2.8.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
